apps/agent/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: agent
  labels:
    app.kubernetes.io/managed-by: kustomize
    platform.lyeh.dev/layer: app
